# wush

./: .env  .gitignore  README.md  nohup.out  pyproject.toml  requirements.txt  setup.py  test.py
data/: pip.conf
docs/: HISTORY.md
docs/source/: conf.py  index.rst
tests/: test_wapi.py
tests/argument/: test_parse.py  test_run.py
tests/common/: test_args.py  test_config_value.py  test_functions.py  test_utils.py
tests/completion/: test_filesystem.py
tests/config/: __init__.py  test_config.py  test_models.py
tests/model/: test_datatype.py  test_model.py
tests/tmp/: wush.py
tests/web/: curl_text  test_cookie.py  test_curl_utils.py  test_models.py  test_request.py  test_response.py  test_utils.py
wapi/: __init__.py  __version__.py  models.py  wapi.py
wapi/argument/: __init__.py  command.py  config.py  decorates.py  default.py  enum.py  env.py  factory.py  func.py  history.py  parse.py  run.py  view.py
wapi/cli/: main.py  param.py  prompt_toolkits.py  run.py  server.py  shell.py
wapi/common/: args.py  config.py  config_value.py  constants.py  cookie.py  decorates.py  dicts.py  exceptions.py  files.py  functions.py  utils.py
wapi/completion/: __init__.py  base.py  command.py  command_completer.py  filesystem.py  word.py
wush/: __init__.py  __version__.py  models.py  wush.py
wush/argument/: __init__.py  alias.py  command.py  config.py  cookie.py  default.py  enum.py  env.py  func.py  history.py  parse.py  run.py  server.py  shell.py  view.py
wush/cli/: command.py  exceptions.py  main.py  prompt_toolkits.py  run.py  server.py  shell.py  test.py
(+38 files in other folders)
